// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Tweet renders correctly 1`] = `
<a
  className="tweet"
  href="https://twitter.com/1318691388242956291"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="row"
  >
    <div
      className="col colSmall4 colMedium4 colLarge6"
    >
      <img
        alt="Twitter"
        className="twitterLogo twitterLogoMobileOnly"
        src="test-file-stub"
      />
      <h4>
        <span
          className="a11y-only"
        >
          Latest tweet from 
        </span>
        <img
          alt=""
          src="test-file-stub"
        />
        @COVID19Tracking
      </h4>
      <blockquote
        dangerouslySetInnerHTML={
          Object {
            "__html": "We’ve written about the ways that states are reporting  antigen tests, which are becoming a major tool for rapid COVID-19 testing. But if states don’t report results clearly, we won’t know the true impact of these tests.

 ",
          }
        }
      />
      <p
        className="date"
      >
        Tue Oct 20 23:11:41 +0000 2020
      </p>
    </div>
    <div
      className="col colSmall4 colMedium4 colLarge6"
    >
      <img
        alt="Twitter"
        className="twitterLogo twitterLogoDesktopOnly"
        src="test-file-stub"
      />
      <img
        alt=""
        src="//pbs.twimg.com/media/EkzuvoHXUAARG6C.jpg"
      />
    </div>
  </div>
</a>
`;

exports[`Components : Common: Tweet renders correctly 2`] = `
<a
  className="tweet"
  href="https://twitter.com/1318691388242956291"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="row"
  >
    <div
      className="col colSmall4 colMedium4 colLarge12"
    >
      <img
        alt="Twitter"
        className="twitterLogo"
        src="test-file-stub"
      />
      <h4>
        <span
          className="a11y-only"
        >
          Latest tweet from 
        </span>
        <img
          alt=""
          src="test-file-stub"
        />
        @COVID19Tracking
      </h4>
      <blockquote
        dangerouslySetInnerHTML={
          Object {
            "__html": "We’ve written about the ways that states are reporting  antigen tests, which are becoming a major tool for rapid COVID-19 testing. But if states don’t report results clearly, we won’t know the true impact of these tests.

 ",
          }
        }
      />
      <p
        className="date"
      >
        Tue Oct 20 23:11:41 +0000 2020
      </p>
    </div>
  </div>
</a>
`;
